--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,16 @@
     />
 
     <title>React App</title>
+    <style type="text/css">
+      body {
+        width: 100%;
+      }
+      @media screen and (max-width: 480px) {
+        body {
+          width: fit-content;
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
