data stucture and 404

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,11 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"
     />
 
-    <title>React App</title>
+    <title>MoviesDB</title>
     <style type="text/css">
       body {
         width: 100%;
+        height: 100%;
       }
       @media screen and (max-width: 480px) {
         body {
